--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Quiz App</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=Exo:ital,wght@1,600&display=swap" rel="stylesheet">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -69,8 +69,8 @@
             <button id="startAgain">Start Again</button>
         </div>
     </div>
-    <script src="js/questions.js"></script>
-    <script src="js/script.js"></script>
+    <script src="questions.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
